--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+setuptools==68.2.2
+wheel==0.41.2
 flask==2.3.3
 flask-socketio==5.3.6
 python-binance==1.0.19
@@ -7,5 +9,6 @@ scikit-learn==1.3.0
 requests==2.31.0
 python-telegram-bot==20.4
 joblib==1.3.2
-python-dotenv==1.0.0  # ← YENİ
-gunicorn==21.2.0      # ← YENİ (Railway için)
+python-dotenv==1.0.0
+gunicorn==21.2.0
+eventlet==0.33.3
